--- a/app.css
+++ b/app.css
@@ -1,5 +1,10 @@
+body {
+    background-color: black;
+}
+
 h1 {
     justify-content: center;
     margin: auto;
     display: flex;
+    color: aquamarine;
 }
